[package]
name = "rust-oop"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "use macro to implement inheritance"
repository = "https://github.com/reply7251/oop/"
keywords = ["oop", "inherit", "inheritance"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.107", features = ["full"]}
quote = "1.0.23"
proc-macro2 = "1.0.49"
lazy_static = "1.4.0"